  MFP UART input and output. (THH)
- bios/floppy.c bios/acsi.c: The timeout_gpip() function was declared twice,
  in acsi.c and floppy.c. Merged them now into one function only. Thanks to
  Jens Caroll for the hint! (THH)

2008-09-17
- bios/machine.c: Fixed cookies setup: _SWI cookie was never initilized, and
  in the _SND cookie the DMA sound bit was never set. (THH)

2008-09-29
- cli/command.c: Check for valid drive when running the SHOW command. (THH)

2008-10-03
- cli/command.c:
   -> Declared local functions and variables as static. (patch by E. Tamminen)
   -> Reworked the help texts. (patch by E. Tamminen)
   -> Removed command aliases ERA and INIT. (THH)

2008-10-29
- bios/parport.c: Fixed return value of bcostat0 (thanks to David Savinkoff
  for the hint) (THH)

2008-11-03
- bios/parport.c: Fixed bconout0 so that printing should be working now
  (thanks to David Savinkoff for the patch) (THH)

2008-11-14
- cli/command.c: Disabled the moldy commands FORMAT, GETBOOT and PUTBOOT (THH)
- cli/command.c: Removed the global 10k big buffer. (THH)
- cli/coma.S: Increased the stack size a little bit. (THH)

* Release: 0.8.4

2008-11-23
- bios/initinfo.c: timeout on boot removed - hold <Shift> if you miss it (joy)

2008-11-24
- bios/memory.S: memvalid setting moved to BIOS (joy)
- bios/bios.c: check for cold/warm start, show initinfo on coldstart only (joy)

2008-12-13
- bios/initinfo.c: global variable early_cli must not be initialized or it
  gets to DATA area in ROM space where you can't change its value later (joy)

2009-06-11
- bdos/bdosmain.c: GEMDOS function dispatcher now handles the amount of
  parameters on the stack correctly. No more accesses beyond the TPA. (THH)

2009-06-25
- desk/deskfpd.c: Fixed empty desktop windows with GCC 4.x.
  (patch by Vincent Riviere)

2009-06-27
- vdi/vdi_blit.S: Fixed crash in bit_blt() at desktop startup when compiled
  without -fomit-frame-pointer. (patch by Vincent Riviere)